--- a/medias/styles/scss/_colors.scss
+++ b/medias/styles/scss/_colors.scss
@@ -1,9 +1,9 @@
 $white: #fff;
-$black: #000;
+$black: #111;
 $darkgrey: #6d6d6d;
 $grey: #919191;
 $middlegrey: #d9dade;
 $lightgrey: #f3f3f3;
-$mainColor: #68c9fe;
-$red: #cf0304;
+$mainColor: #d3002d;
+$red: #d00101;
 $green: #96c829;
