--- a/application/views/partials/common/header.phtml
+++ b/application/views/partials/common/header.phtml
@@ -18,9 +18,8 @@
         <header>
             <div id="joueurDetails">
                 <?php if(!empty($joueur)): ?>
-                <span id="joueur" data-id="<?php echo($joueur->getId()); ?>"><?php echo($joueur->getName()); ?></span>
-                <br/>
-                <span id="capital"><?php echo($joueur->getCapital(true)); ?></span>
+                <div id="joueur" data-id="<?php echo($joueur->getId()); ?>"><?php echo($joueur->getName()); ?></div>
+                <div id="capital"><?php echo($joueur->getCapital(true)); ?></div>
                 <?php endif; ?>
             </div><img src="http://www.mercier-auto.com/wp-content/themes/aka_theme/images/logo.png" alt="Mercier">
         </header>
