--- a/medias/styles/scss/_base.scss
+++ b/medias/styles/scss/_base.scss
@@ -19,6 +19,7 @@ hr {
 input[type=text],
 input[type=number],
 input[type=email] {
+    outline: none;
     border: 1px solid $middlegrey;
     font-size: $fontLL;
     color:$black;
