--- a/application/views/encheres.phtml
+++ b/application/views/encheres.phtml
@@ -43,7 +43,7 @@ echo template(
             </div>
         </div>
     </div>
-    <div id="info"></div>
+    <div id="resultats"></div>
 </div>
 
 <script type="text/javascript" src="<?php echo baseUrl('medias/scripts/main.js'); ?>"></script>
