--- a/application/views/start.phtml
+++ b/application/views/start.phtml
@@ -8,6 +8,15 @@ echo template(
 ?>
 <div class="container">
 <div id="startGame">
+    <div class="row mt20 mb10">
+        <div class="col-md-12">
+            <p>Bienvenue chez Mercier, votre commisseur priseur. Grâce à un partenariat avec Gogol Inc., nous vous proposons des enchères rapides, sécurisées et intéressantes via cette interface digitale.</p>
+            <p>Les sessions d'enchères se déroulent en 3 phases durant lesquelles 10 lots vous seront proposés. Chaque manche regroupe des objets de valeurs similaires, les meilleurs lots étant présentés lors de la dernière manche.</p>
+            <p>Vous serez immédiatement débité du montant des enchères remportées durant une manche.</p>
+            <p>À la fin de chaque manche, les lots que vous avez remportés sont automatiquement revendus à leur valeur marchande (prix de revente) : vous touchez alors la différence avec votre prix d'achat.</p>
+            <p><strong>Nous vous souhaitons de bonnes enchères !</strong></p>
+        </div>
+    </div>
     <div class="row">
         <col-md-6>
             <h2>Mon profil</h2>
