--- a/medias/styles/scss/_base.scss
+++ b/medias/styles/scss/_base.scss
@@ -1,13 +1,17 @@
 html,
 body,
 table{
-    @include fontLt;
+    @include font;
     font-size: $fontM;
     color: $darkgrey;
     -webkit-font-smoothing: antialiased;
     font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+}
+
+body {
+    background: $background;
 }
 
 hr {
