--- a/medias/styles/scss/_encheres.scss
+++ b/medias/styles/scss/_encheres.scss
@@ -2,6 +2,9 @@
     #timeContainer {
         width: 100%;
         height: 4px;
+        border:1px $black solid;
+        border-bottom: none;
+        background: $black;
 
         #remainingTime {
             transition: all 1s ease-in-out;
@@ -24,21 +27,25 @@
     }
 
     #lotContainer {
+        border:1px $black solid;
+        padding: 0 20px 20px 20px;
+        width: 100%;
+        background: $white;
         #titre {
             @include fontBd;
             font-size: 20px;
         }
         #description {
-            color: $middlegrey;
+            color: $grey;
         }
-            #valeurRevente {
-                color:$grey;
-                @include fontBd;
-            }
+        #valeurRevente {
+            color:$grey;
+            @include fontBd;
+        }
 
         #imageLot {
-            width: 150px;
-            border: $black;
+            height: 150px;
+            border: $darkgrey 1px solid;
         }
     }
 
@@ -81,6 +88,8 @@
             border-radius: 4px;
             border:1px solid $black;
             margin: 0 5px;
+            width:80px;
+            vertical-align:middle;
         }
     }
 
