--- a/medias/styles/scss/_fonts.scss
+++ b/medias/styles/scss/_fonts.scss
@@ -1,32 +1,1 @@
-@font-face{
-    font-family:'Frutiger-Light';
-    src:url('../../fonts/Frutiger45Light.eot');
-    src:url('../../fonts/Frutiger45Light.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/Frutiger45Light.woff') format('woff'),
-    url('../../fonts/Frutiger45Light.ttf') format('truetype'),
-    url('../../fonts/Frutiger45Light.svg#Frutiger45Light') format('svg');
-    font-weight:normal;
-    font-style:normal;
-}
-
-@font-face{
-    font-family:'Frutiger-Roman';
-    src:url('../../fonts/Frutiger55Roman.eot');
-    src:url('../../fonts/Frutiger55Roman.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/Frutiger55Roman.woff') format('woff'),
-    url('../../fonts/Frutiger55Roman.ttf') format('truetype'),
-    url('../../fonts/Frutiger55Roman.svg#Frutiger55Roman') format('svg');
-    font-weight:normal;
-    font-style:normal;
-}
-
-@font-face{
-    font-family:'Frutiger-Bold';
-    src:url('../../fonts/Frutiger65Bold.eot');
-    src:url('../../fonts/Frutiger65Bold.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/Frutiger65Bold.woff') format('woff'),
-    url('../../fonts/Frutiger65Bold.ttf') format('truetype'),
-    url('../../fonts/Frutiger65Bold.svg#Frutiger65Bold') format('svg');
-    font-weight:normal;
-    font-style:normal;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,700');
