--- a/medias/styles/scss/_header.scss
+++ b/medias/styles/scss/_header.scss
@@ -1,12 +1,15 @@
 header {
-    height: 112px;
+    margin-bottom: 20px;
+    background: $darkgrey;
+    height: 100px;
+
     #joueurDetails {
         float: left;
         background: $black;
         color:$lightgrey;
         width: 30%;
         padding: 20px;
-        height: 100%;
+        height: 112px;
 
         #joueur {
             display: block;
