--- a/application/views/encheres.phtml
+++ b/application/views/encheres.phtml
@@ -26,22 +26,24 @@ echo template(
                 <div class="prixRevente mt10">Valeur de revente (estimation) : <span id="valeurRevente">0 €</span></div>
             </div>
         </div>
-        <div id="meilleureOffreContainer" class="textCenter">
-            <h2>Meilleure offre : </h2>
-            <div id="meilleureOffre">
-                <div class="status orange"></div> <img id="meilleureOffreImage" class="hidden" src="" alt="" /> <span id="meilleureOffreName">En attente</span>
+        <div class="row">
+            <div id="meilleureOffreContainer" class="textCenter col-md-6">
+                <h2>Meilleure offre : </h2>
+                <div id="meilleureOffre">
+                    <div class="status orange"></div> <img id="meilleureOffreImage" class="hidden" src="" alt="" /> <span id="meilleureOffreName">En attente</span>
+                </div>
             </div>
-        </div>
-        <div id="monOffreContainer" class="textCenter invisible">
-            <h2>Enchérir : </h2>
-            <div id="monOffre">
-                <div id="enchereStatusMessage" class="notvisible mb10"></div>
-                <form action="" method="post" name="encherir">
-                    <input type="number" class="textRight" name="montant" id="montant" value="0" disabled step="50" /><span class="button disabled" id="submitEnchere">GO</span>
-                    <input type="hidden" name="joueurId" value="<?php echo($joueur->getId()); ?>" />
-                    <input type="hidden" name="lotId" id="lotId" value="" />
-                    <input type="hidden" name="partieId" value="<?php echo($partie->getId()); ?>" />
-                </form>
+            <div id="monOffreContainer" class="textCenter invisible col-md-6">
+                <h2>Enchérir : </h2>
+                <div id="monOffre">
+                    <div id="enchereStatusMessage" class="notvisible mb10"></div>
+                    <form action="" method="post" name="encherir">
+                        <input type="number" class="textRight" name="montant" id="montant" value="0" disabled step="50" /><span class="button disabled" id="submitEnchere">GO</span>
+                        <input type="hidden" name="joueurId" value="<?php echo($joueur->getId()); ?>" />
+                        <input type="hidden" name="lotId" id="lotId" value="" />
+                        <input type="hidden" name="partieId" value="<?php echo($partie->getId()); ?>" />
+                    </form>
+                </div>
             </div>
         </div>
     </div>
