--- a/application/views/encheres.phtml
+++ b/application/views/encheres.phtml
@@ -30,7 +30,7 @@ echo template(
             <div id="meilleureOffreContainer" class="textCenter col-md-6">
                 <h2>Meilleure offre : </h2>
                 <div id="meilleureOffre">
-                    <div class="status orange"></div> <img id="meilleureOffreImage" class="hidden" src="" alt="" /> <span id="meilleureOffreName">En attente</span>
+                    <div class="status orange"></div> <img class="meilleureOffreImage" id="meilleureOffreImage" class="hidden" src="" alt="" /> <span id="meilleureOffreName">En attente</span>
                 </div>
             </div>
             <div id="monOffreContainer" class="textCenter invisible col-md-6">
