--- a/medias/styles/scss/_encheres.scss
+++ b/medias/styles/scss/_encheres.scss
@@ -83,14 +83,14 @@
                 background: $green;
             }
         }
+    }
 
-        #meilleureOffreImage {
-            border-radius: 4px;
-            border:1px solid $black;
-            margin: 0 5px;
-            width:80px;
-            vertical-align:middle;
-        }
+    .meilleureOffreImage {
+        border-radius: 4px;
+        border:1px solid $black;
+        margin: 0 5px;
+        width:80px;
+        vertical-align:middle;
     }
 
     input[name=montant] {
@@ -99,5 +99,21 @@
 
     #submitEnchere {
         border-radius: 0 3px 3px 0px;
+    }
+
+    .resultLine {
+        border-bottom: 1px solid $grey;
+        .prixrevente {
+            color:$grey;
+            @include fontBd;
+        }
+        .plusvalue {
+            @include fontBd;
+            font-size: $fontLL;
+            color: $green;
+            &.negative {
+                color: $red;
+            }
+        }
     }
 }
